# Cauchy_stiff_test_2016

./: CMakeLists.txt  LICENSE  README.md  config_parser.cpp  config_parser.h  csvstream.cpp  csvstream.h  debug_mod.h  ivp_cauchy_solver.cpp  ivp_cauchy_solver.h  main.cpp  mpTypes.h  myTimer.h  newton_iterator.cpp  newton_iterator.h  plotter.m
config/: config.txt
